srcs/yaml/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  replicas: 1
  strategy:
    type: Recreate
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - image: grafana_alpine_esou
        imagePullPolicy: Never
        name: grafana
      restartPolicy: Always
      volumes:
      - name: grafana-volume
        hostPath:
          path: /grafana
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: grafana
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 3000
