srcs/yaml/ingress.yaml
apiVersion: extensions/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: nginx
    servicePort: 80
  rules:
  - host: 
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
